[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Osama-Yousef <osamawalidyousef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.5"
corpus = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
